...
        android:id="@+id/cl_maps"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--     Route Sheet      -->
        <FrameLayout
            android:id="@+id/standard_bottom_sheet"
            style="@style/ThemeOverlay.App.BottomSheetDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:elevation="10dp"
            android:overScrollMode="always"
...
